# hermes

./: .gitignore  CMakeLists.txt  COPYRIGHT  INSTALL.md  NOTICE  README.md  quickstart.sh
experiments/result/: encrypt_bitcoin.txt  encrypt_bitcoin_4096.txt  encrypt_covid19.txt  encrypt_hg38.txt  encrypt_hg38_4096.txt  insert_bitcoin.txt  insert_bitcoin_4096.txt  insert_covid19.txt  insert_covid19_4096.txt  insert_hg38.txt  load_tbl_bitcoin.txt  load_tbl_covid19.txt  load_tbl_hg38.txt  loading_eval_tbl_bitcoin.txt  loading_eval_tbl_covid19.txt  loading_eval_tbl_hg38.txt  remove_bitcoin.txt  remove_covid19.txt  remove_covid19_4096.txt  remove_hg38.txt  remove_hg38_4096.txt
experiments/result/scale_1024/: encrypt_bitcoin.txt  encrypt_covid19.txt  encrypt_hg38.txt  insert_bitcoin.txt  insert_covid19.txt  insert_hg38.txt  remove_bitcoin.txt  remove_covid19.txt  remove_hg38.txt
experiments/result/scale_128/: encrypt_bitcoin.txt  encrypt_covid19.txt  encrypt_hg38.txt  insert_bitcoin.txt  insert_covid19.txt  insert_hg38.txt  remove_bitcoin.txt  remove_covid19.txt  remove_hg38.txt
experiments/result/scale_2048/: encrypt_bitcoin.txt  encrypt_covid19.txt  encrypt_hg38.txt  insert_bitcoin.txt  insert_covid19.txt  insert_hg38.txt  remove_bitcoin.txt  remove_covid19.txt  remove_hg38.txt
experiments/result/scale_256/: encrypt_bitcoin.txt  encrypt_covid19.txt  encrypt_hg38.txt  insert_bitcoin.txt  insert_covid19.txt  insert_hg38.txt  remove_bitcoin.txt  remove_covid19.txt  remove_hg38.txt
experiments/result/scale_4096/: encrypt_covid19_4096.txt  insert_hg38_4096.txt  remove_bitcoin_4096.txt
experiments/result/scale_512/: encrypt_bitcoin.txt  encrypt_covid19.txt  encrypt_hg38.txt  insert_bitcoin.txt  insert_covid19.txt  insert_hg38.txt  remove_bitcoin.txt  remove_covid19.txt  remove_hg38.txt
experiments/result/scale_8192/: insert_bitcoin.txt  remove_covid19.txt  remove_hg38.txt
experiments/script/: convert_csv.sh  eval_all.sh  eval_encrypt.sh  eval_insert.sh  eval_loading.sh  eval_remove.sh  load_csv.sh
paper/: .gitignore
paper/Preprint/: hermes.tex  ref.bib
paper/TR2026/: hermes.tex
scripts/: build.sh  count_lines.sh  find_valid_moduli.py  run.sh  run_crypto.sh  run_pack.sh  run_singular.sh  setup_mysql.sh
scripts/example_output/: run_crypto_output.txt  run_pack_output.txt  run_singular_output.txt
src/: context.cpp  utils.cpp  utils.h
src/crypto/: CMakeLists.txt  base64.cpp  base64.hpp  context.cpp  context.hpp  decrypt.cpp  decrypt.hpp  encrypt.cpp  encrypt.hpp  globals.hpp  keygen.cpp  keygen.hpp  serialize.cpp  serialize.hpp
src/crypto/test/: test_decrypt.cpp  test_encrypt.cpp  test_eval.cpp  test_keygen.cpp  test_serialize.cpp
src/mysql/: hpdic_hermes_singular.cpp
src/pack/: CMakeLists.txt  packing.cpp  packsum.cpp  packupdate.cpp
src/singular/: CMakeLists.txt  CMakeLists_singlesession.txt  udf.cpp  udf_singlesession.cpp
src/tools/: CMakeLists.txt  gen_keys.cpp
tmp/: ciphertext.txt  context.txt  publicKey.txt  secretKey.txt
